Map - Allow to disable polylines & switch cluster button

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -286,7 +286,7 @@ span.color[data-color=''][data-selected]:after {
     }
   }
 
-  .leaflet-control-disable-clusters {
+  .leaflet-control-disable-clusters, .leaflet-control-disable-route-polylines {
     &:hover {
       cursor: pointer;
     }
