--- a/app/views/routes/_in_route.html.haml
+++ b/app/views/routes/_in_route.html.haml
@@ -41,7 +41,7 @@
           - route[:skills].each do |skill|
             %li.route-skills-item
               %span
-                %i.fa{class: skil[:icon], style: "color: #{skill[:color]}"}
+                %i.fa{class: skill[:icon], style: "color: #{skill[:color]}"}
                 %span
                   = skill[:label]
       %div
