Planning - Fix duplicated behavior

--- a/app/views/routes/_edit.html.haml
+++ b/app/views/routes/_edit.html.haml
@@ -1,2 +1,4 @@
 - routes.each do |route|
-  = render partial: 'routes/in_route.html.haml', locals: { route: route, summary: summary }
+  - if route[:vehicle_id]
+    %li.route{"data-color": route[:color], "data-route-id": route[:route_id]}
+      = render partial: 'routes/in_route.html.haml', locals: { route: route, summary: summary }
