--- a/app/views/routes/_out_of_route.js.erb
+++ b/app/views/routes/_out_of_route.js.erb
@@ -1,2 +1,2 @@
-$('ol.routes.out_routes').find('li.route').html("<%= j(render 'routes/out_of_route.html.haml', local_assigns) %>");
+$('ol.routes.out_routes').find('li.route').closest('ol.routes.out_routes').html("<%= j(render 'routes/out_of_route.html.haml', local_assigns) %>");
 var locals = <%= local_assigns.to_json.html_safe %>;
