--- a/app/views/routes/_in_route.js.erb
+++ b/app/views/routes/_in_route.js.erb
@@ -1,2 +1,3 @@
 $('ol.routes').find("li.route[data-route-id='<%= @route.id %>']").html("<%= j(render 'routes/in_route.html.haml', local_assigns) %>");
+$('#route_selector').html("<%= j(render partial: 'plannings/selector.html.haml', locals: local_assigns) %>");
 var locals = <%= local_assigns.to_json.html_safe %>;
