Display loading on extend

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -572,8 +572,7 @@ $sidebar-margins: 10px;
       overflow: auto;
 
       h1,
-      form,
-      .btn {
+      form {
         display: none;
       }
 
