--- a/app/views/vehicle_usages/_form.html.haml
+++ b/app/views/vehicle_usages/_form.html.haml
@@ -113,26 +113,26 @@
           = t('activerecord.attributes.customer.router_options_traffic')
         .col-md-offset-2.col-md-8.field.input-append.form-inline
           %label
-            %input#vehicle_usage_vehicle_router_options_traffic_yes{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['traffic'] == true ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_traffic_yes{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['traffic'] == true ? 'true' : nil)}
             = t('customers.form.router_options_traffic_yes')
           %label
-            %input#vehicle_usage_vehicle_router_options_traffic_no{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['traffic'] == false ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_traffic_no{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['traffic'] == false ? 'true' : nil)}
             = t('customers.form.router_options_traffic_no')
           %label.pull-right
-            %input#vehicle_usage_vehicle_router_options_traffic_default{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['traffic'].nil? ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_traffic_default{name: "vehicle_usage[vehicle][router_options][traffic]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['traffic'].nil? ? 'true' : nil)}
             = t('customers.form.router_options_traffic_default', value: @vehicle_usage.vehicle.customer.router_options['traffic'] == true ? t('customers.form.router_options_traffic_yes') : t('customers.form.router_options_traffic_no'))
       #router_options_track_input{ class: (@vehicle_usage.vehicle.default_router.track? ? '' : 'router-option-disabled')}
         %label.col-md-offset-2.col-md-8.field{for: "vehicle_usage_vehicle_router_options_track"}
           = t('activerecord.attributes.customer.router_options_track')
         .col-md-offset-2.col-md-8.field.input-append.form-inline
           %label
-            %input#vehicle_usage_vehicle_router_options_track_yes{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['track'] == true ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_track_yes{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['track'] == true ? 'true' : nil)}
             = t('customers.form.router_options_track_yes')
           %label
-            %input#vehicle_usage_vehicle_router_options_track_no{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['track'] == false ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_track_no{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['track'] == false ? 'true' : nil)}
             = t('customers.form.router_options_track_no')
           %label.pull-right
-            %input#vehicle_usage_vehicle_router_options_track_default{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['track'].nil? ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_track_default{name: "vehicle_usage[vehicle][router_options][track]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['track'].nil? ? 'true' : nil)}
             = t('customers.form.router_options_track_default', value: @vehicle_usage.vehicle.customer.router_options['track'] == false ? t('customers.form.router_options_track_no') : t('customers.form.router_options_track_yes'))
 
       #router_options_motorway_input{ class: (@vehicle_usage.vehicle.default_router.motorway? ? '' : 'router-option-disabled')}
@@ -140,13 +140,13 @@
           = t('activerecord.attributes.customer.router_options_motorway')
         .col-md-offset-2.col-md-8.field.input-append.form-inline
           %label
-            %input#vehicle_usage_vehicle_router_options_motorway_yes{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['motorway'] == true ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_motorway_yes{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['motorway'] == true ? 'true' : nil)}
             = t('customers.form.router_options_motorway_yes')
           %label
-            %input#vehicle_usage_vehicle_router_options_motorway_no{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['motorway'] == false ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_motorway_no{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['motorway'] == false ? 'true' : nil)}
             = t('customers.form.router_options_motorway_no')
           %label.pull-right
-            %input#vehicle_usage_vehicle_router_options_motorway_default{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['motorway'].nil? ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_motorway_default{name: "vehicle_usage[vehicle][router_options][motorway]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['motorway'].nil? ? 'true' : nil)}
             = t('customers.form.router_options_motorway_default', value: @vehicle_usage.vehicle.customer.router_options['motorway'] == 'false' ? t('customers.form.router_options_motorway_no') : t('customers.form.router_options_motorway_yes'))
 
       #router_options_low_emission_zone_input{ class: (@vehicle_usage.vehicle.default_router.low_emission_zone? ? '' : 'router-option-disabled')}
@@ -154,13 +154,13 @@
           = t('activerecord.attributes.customer.router_options_low_emission_zone')
         .col-md-offset-2.col-md-8.field.input-append.form-inline
           %label
-            %input#vehicle_usage_vehicle_router_options_low_emission_zone_yes{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'] == true ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_low_emission_zone_yes{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'] == true ? 'true' : nil)}
             = t('customers.form.router_options_low_emission_zone_yes')
           %label
-            %input#vehicle_usage_vehicle_router_options_low_emission_zone_no{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'] == false ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_low_emission_zone_no{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'] == false ? 'true' : nil)}
             = t('customers.form.router_options_low_emission_zone_no')
           %label.pull-right
-            %input#vehicle_usage_vehicle_router_options_low_emission_zone_default{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'].nil? ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_low_emission_zone_default{name: "vehicle_usage[vehicle][router_options][low_emission_zone]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['low_emission_zone'].nil? ? 'true' : nil)}
             = t('customers.form.router_options_low_emission_zone_default', value: @vehicle_usage.vehicle.customer.router_options['low_emission_zone'] == 'false' ? t('customers.form.router_options_low_emission_zone_no') : t('customers.form.router_options_low_emission_zone_yes'))
 
       #router_options_toll_input{ class: (@vehicle_usage.vehicle.default_router.toll? ? '' : 'router-option-disabled')}
@@ -168,13 +168,13 @@
           = t('activerecord.attributes.customer.router_options_toll')
         .col-md-offset-2.col-md-8.field.input-append.form-inline
           %label
-            %input#vehicle_usage_vehicle_router_options_toll_yes{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['toll'] == true ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_toll_yes{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "true", checked: (@vehicle_usage.vehicle.router_options['toll'] == true ? 'true' : nil)}
             = t('customers.form.router_options_toll_yes')
           %label
-            %input#vehicle_usage_vehicle_router_options_toll_no{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['toll'] == false ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_toll_no{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "false", checked: (@vehicle_usage.vehicle.router_options['toll'] == false ? 'true' : nil)}
             = t('customers.form.router_options_toll_no')
           %label.pull-right
-            %input#vehicle_usage_vehicle_router_options_toll_default{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['toll'].nil? ? 'true' : '')}
+            %input#vehicle_usage_vehicle_router_options_toll_default{name: "vehicle_usage[vehicle][router_options][toll]", type: "radio", value: "", checked: (@vehicle_usage.vehicle.router_options['toll'].nil? ? 'true' : nil)}
             = t('customers.form.router_options_toll_default', value: @vehicle_usage.vehicle.customer.router_options['toll'] == 'false' ? t('customers.form.router_options_toll_no') : t('customers.form.router_options_toll_yes'))
 
       #router_options_trailers_input{ class: (@vehicle_usage.vehicle.default_router.trailers? ? '' : 'router-option-disabled')}
