change i18n title for change sector color

--- a/app/templates/zones/_show.mustache
+++ b/app/templates/zones/_show.mustache
@@ -34,7 +34,7 @@
           {{/colors}}
         </select>
         <span class="fake select2 select2-container select2-container--bootstrap input-sm select2-container--below" dir="ltr" style="display: inline-block;">
-          <span class="selection" title="{{#i18n}}plannings.edit.route_change_color_help{{/i18n}}">
+          <span class="selection" title="{{#i18n}}plannings.edit.zone_change_color_help{{/i18n}}">
             <span aria-labelledby="select2-zone[color]-uj-container" tabindex="0" class="select2-selection select2-selection--single" role="combobox" aria-autocomplete="list" aria-haspopup="true" aria-expanded="false">
               <span id="select2-zone[color]-uj-container" class="select2-selection__rendered">
                 <span class="color_small" style="background:{{color}};vertical-align: top;">
