--- a/app/views/plannings/show.gpx.erb
+++ b/app/views/plannings/show.gpx.erb
@@ -1,6 +1,6 @@
 <% require 'time' %>
 <?xml version="1.0" encoding="UTF-8"?>
-<gpx version="1.0" creator="mapotempo" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.topografix.com/GPX/1/0" xsi:schemaLocation="http://www.topografix.com/GPX/1/0 http://www.topografix.com/GPX/1/0/gpx.xsd">
+<gpx version="1.0" creator="planner" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.topografix.com/GPX/1/0" xsi:schemaLocation="http://www.topografix.com/GPX/1/0 http://www.topografix.com/GPX/1/0/gpx.xsd">
   <name><%= @planning.name %></name>
   <time><%= (@planning.date || Time.now).iso8601 %></time>
 <% @planning.routes.select{ |route| route.vehicle_usage_id && route.size_active > 0 }.each{ |route| %>
