--- a/app/views/plannings/_edit_head.html.haml
+++ b/app/views/plannings/_edit_head.html.haml
@@ -15,6 +15,11 @@
       .primary.route-info
         %i.fa.fa-flask.fa-fw>
         = "#{averages[:emission]} #{t('all.unit.kgco2e_html')}"
+    .col-xs-4{title: t('plannings.edit.cost_help')}
+      .primary.route-info
+        %i.fa.fa-coins.fa-fw
+        = averages[:total_cost]
+        = t("all.unit.currency_symbol.#{prefered_currency}")
   .col-xs-4{title: t("plannings.edit.duration_help")}
     .route-info.primary
       %i.fa.fa-stopwatch.fa-fw>
