--- a/app/views/vehicle_usages/_form.html.haml
+++ b/app/views/vehicle_usages/_form.html.haml
@@ -40,6 +40,36 @@
           %p.help-block
             = t 'vehicles.form.emissions.help'
             \- #{current_user.prefered_unit == 'mi' ? t('vehicles.form.consumption.help_miles') : t('vehicles.form.consumption.help')}
+
+      #vehicle_usage_display_costs.row
+        %label.col-md-offset-2.col-md-8.field
+          = t 'activerecord.attributes.vehicle_usages.costs'
+        .col-md-offset-2.col-md-8.field
+          .input-group
+            = number_field :vehicle_usage, :cost_fixed,
+              value: @vehicle_usage.cost_fixed,
+              placeholder: @vehicle_usage.default_cost_fixed,
+              step: 'any', class: 'form-control', min: 0
+            %span.input-group-addon
+              = t "all.unit.currency_symbol.#{current_user.prefered_currency}"
+            = number_field :vehicle_usage, :cost_time,
+              value: @vehicle_usage.cost_time,
+              placeholder: @vehicle_usage.default_cost_time,
+              step: 'any', class: 'form-control', min: 0
+            %span.input-group-addon
+              = t "all.unit.currency_symbol.#{current_user.prefered_currency}"
+              \/
+              = t('time.hour')
+            = number_field :vehicle_usage, :cost_distance,
+              value: @vehicle_usage.cost_distance,
+              placeholder: @vehicle_usage.default_cost_distance,
+              step: 'any', class: 'form-control', min: 0
+            %span.input-group-addon
+              = t "all.unit.currency_symbol.#{current_user.prefered_currency}"
+              \/
+              = current_user.prefered_unit == 'mi' ? t('all.unit.mile') : t('all.unit.kms')
+          %p.help-block
+            = t 'vehicle_usages.form.cost.help'
       #vehicle_usage_vehicle_max_distance.row
         %label.sr-only{for: "vehicle_usage_vehicle_max_distance"}
           = t 'activerecord.attributes.vehicle.max_distance'
